# final-project-repo-group-2

./: .gitignore  README.md  pyproject.toml
notebooks/: Pei_1st_data_try.ipynb  Pei_NLP_Analysis.ipynb
scripts/: README.md  fuguan_analysis.ipynb  hello_Pei.py.py  hello_fuguan.py  hello_kaia.py  llm_absa_analysis.ipynb  subset_absa_analysis.ipynb  subset_absa_extraction.ipynb
scripts/notebooks/: Pei_NLP_Analysis.ipynb  data_cleaning.ipynb  fallWinter_analysis.ipynb  seasonal_analysis2.ipynb
src/: __init__.py  data_cleaning.ipynb
src/amazon_consumer_project/: mymodule.py  utils.py
src/amazon_fashion_review/: mymodule.py
src/fashion/: preprocessing.py
