[project]
name = "amazon_consumer_project"
version = "0.0.1"
description = "behavior and sentiment analysis on Amazon Fashion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
